Fix bugs in api
