# boost_request/boost_request_manager.go
@@ -80,6 +80,8 @@ func (brm *BoostRequestManager) CreateBoostRequest(
 		Channel:                *brc,
 		RequesterID:            brPartial.RequesterID,
 		Message:                brPartial.Message,
+		Price:                  brPartial.Price,
+		AdvertiserCut:          brPartial.AdvertiserCut,
 		EmbedFields:            brPartial.EmbedFields,
 		PreferredAdvertiserIDs: brPartial.PreferredAdvertiserIDs,
 		CreatedAt:              time.Now().UTC(),
@@ -98,24 +100,6 @@ func (brm *BoostRequestManager) CreateBoostRequest(
 			log.Printf("Error searching roles for discounts: %v", err)
 		}
 		br.RoleDiscounts = rd
-	}
-
-	localizer := i18n.NewLocalizer(brm.bundle, "en")
-
-	if br.EmbedFields == nil && br.Price != 0 || br.AdvertiserCut != 0 {
-		br.EmbedFields = make([]*repository.MessageEmbedField, 0, 2)
-	}
-	if br.Price != 0 {
-		br.EmbedFields = append(br.EmbedFields, &repository.MessageEmbedField{
-			Name:  "Price",
-			Value: messenger.FormatCopper(localizer, br.Price),
-		})
-	}
-	if br.AdvertiserCut != 0 {
-		br.EmbedFields = append(br.EmbedFields, &repository.MessageEmbedField{
-			Name:  "Advertiser Cut",
-			Value: messenger.FormatCopper(localizer, br.AdvertiserCut),
-		})
 	}
 
 	sequenceArgs := sequences.CreateSequenceArgs{
